tests/ui/unit.stderr
error: unit structs as serialize are not supported
 --> $DIR/unit.rs:4:1
  |
4 | struct S1;
  | ^^^^^^^^^^

error: unit structs as deserialize are not supported
 --> $DIR/unit.rs:7:1
  |
7 | struct S2;
  | ^^^^^^^^^^

error: empty tuple structs as serialize are not supported
  --> $DIR/unit.rs:10:1
   |
10 | struct S3();
   | ^^^^^^^^^^^^

error: empty tuple structs as deserialize are not supported
  --> $DIR/unit.rs:13:1
   |
13 | struct S4();
   | ^^^^^^^^^^^^
